bigapps/Kitchensink/stressExitCode hits assert: Must be VMThread or JavaThread

XMLWordPrintable

    • b133

       # Internal Error (hotspot/src/os/linux/vm/os_linux.cpp:4010), pid=28109, tid=26462
      [glue.process.out] [stress.process.out] # assert(thread->is_VM_thread() || thread->is_Java_thread()) failed: Must be VMThread or JavaThread

            Assignee:
            David Holmes
            Reporter:
            Joseph Provino (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: