8159461: bigapps/Kitchensink/stressExitCode hits assert: Must be VMThread or JavaThread

Reviewed-by: fparain, simonis, dcubed